# qensemble

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
configs/cifar10/: base.yaml  fast_dev.yaml  sweep_phase1_single.yaml  sweep_phase2_dependent.yaml
configs/jsc/: base-256.yaml  base-ensemble2-256-6bit.yaml  base-ensemble2-256-8bit.yaml  base-ensemble2-256.yaml  base-ensemble2.yaml  base-ensemble4-256-8bit.yaml  base-ensemble4-256.yaml  base-ensemble4.yaml  base.yaml  sweep-architecture.yaml  sweep-bayesian.yaml  sweep-single-layer.yaml
configs/mnist/: base-16.yaml  base-32.yaml  base-4.yaml  base-8.yaml  base-ensemble2.yaml  base-ensemble4.yaml  base.yaml  base_ensemble.yaml  independent-ensemble.yaml  sweep-architecture.yaml  sweep-single-layer.yaml
scripts/: agent_one.sh  fixed-bits-experiment.sh  independent_ensemble_jsc.py  summarize_jsc_results.py  sweep_create.sh  sweep_run.sh
src/qensemble/: __init__.py  config.py  main.py  runners.py
src/qensemble/callbacks/: __init__.py  callbacks.py
src/qensemble/datasets/: __init__.py  openml.py  tf_keras.py
src/qensemble/ensemble/: __init__.py  qensemble.py  qensemble_model.py
src/qensemble/io/: __init__.py  bundles.py
src/qensemble/models/: __init__.py  cnn_resnet.py  mlp.py
src/qensemble/optim/: __init__.py  optimizers.py
src/qensemble/utils/: __init__.py  env.py  gitinfo.py  graphs.py  seed.py  tf_gpu.py
src/qensemble/wandb/: __init__.py  artifacts.py  setup.py
